add fontes serifadas ao h1 e h2

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -64,3 +64,12 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+h1{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h2{
+    font-family: 'Times New Roman', Times, serif;
+}
+
