--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,7 +56,7 @@
     margin: 0 auto;
 } */
 .cabecalho{
-    background-color: blue;
+    background-color: rgb(93, 93, 241);
     color: #fff;
     padding: 10px;
     text-align: center;
@@ -73,3 +73,8 @@ h2{
     font-family: 'Times New Roman', Times, serif;
 }
 
+.menu ul li{
+    display: inline;
+    margin-right: 10px;
+    font-weight: bold;
+}
