mudancas nos headers das paginas help e about

--- a/css/paginas.css
+++ b/css/paginas.css
@@ -1,4 +1,7 @@
 .cabecalho{
     background-color: rgb(93, 93, 241);
     padding: 10px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
